--- a/ClassificationExperiment.ipynb
+++ b/ClassificationExperiment.ipynb
@@ -548,13 +548,12 @@
     "\n",
     "import LinearClassifier as LC\n",
     "\n",
-    "\n",
-    "def plotFigure(GD,NAG,Adadelta,RMSprop,Adam,tuned='tuned'):\n",
-    "    GD_loss_test = GD.getLossHistory(X_test,Y_test)\n",
-    "    NAG_loss_test = NAG.getLossHistory(X_test,Y_test)\n",
-    "    Adadelta_loss_test = Adadelta.getLossHistory(X_test,Y_test)\n",
-    "    RMSprop_loss_test = RMSprop.getLossHistory(X_test,Y_test)\n",
-    "    Adam_loss_test = Adam.getLossHistory(X_test,Y_test)\n",
+    "def plotFigure(GD,NAG,Adadelta,RMSprop,Adam,X,Y,tuned='tuned'):\n",
+    "    GD_loss_test = GD.getLossHistory(X,Y)\n",
+    "    NAG_loss_test = NAG.getLossHistory(X,Y)\n",
+    "    Adadelta_loss_test = Adadelta.getLossHistory(X,Y)\n",
+    "    RMSprop_loss_test = RMSprop.getLossHistory(X,Y)\n",
+    "    Adam_loss_test = Adam.getLossHistory(X,Y)\n",
     "    \n",
     "    _, ax = plt.subplots()\n",
     "    ax.plot(range(len(GD_loss_test)),GD_loss_test,label=\\\n",
@@ -727,7 +726,7 @@
     "RMSprop = o['RMSprop']\n",
     "Adam = o['Adam']\n",
     "\n",
-    "plotFigure(GD,NAG,Adadelta,RMSprop,Adam,'tuned')\n",
+    "plotFigure(GD,NAG,Adadelta,RMSprop,Adam,X_test,Y_test,'tuned')\n",
     "\n",
     "init_w = np.random.normal(size=(num_features,1))\n",
     "GD = LC.Classifier(w=init_w,optimizer='GD')\n",
@@ -742,7 +741,7 @@
     "RMSprop.fit(X_train,Y_train)\n",
     "Adam.fit(X_train,Y_train)\n",
     "\n",
-    "plotFigure(GD,NAG,Adadelta,RMSprop,Adam,'untuned')"
+    "plotFigure(GD,NAG,Adadelta,RMSprop,Adam,X_test,Y_test,'untuned')"
    ]
   },
   {
